<resources>
    <string name="app_name">夜嗨</string>
    <string name="home_title">首页</string>
    <string name="application_title">夜嗨</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="resume">允许</string>
    <string name="cancel">取消</string>
    <string name="message_permission_rationale">App运行需要以下权限</string>
    <string name="title_dialog">夜嗨需要权限</string>
    <string name="message_permission_always_failed">请允许这个权限</string>
    <string name="location_permission_tip">夜嗨正常运行需要获取定位权限</string>
    <string name="login">登录</string>
    <string name="register">注册</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_tip">请输入账号</string>
    <string name="password_tip">请输入登录密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="login_tip_protocol">登录即表示同意</string>
    <string name="login_protocol_title">服务协议</string>
    <string name="register_tip_protocol">注册即表示阅读并同意</string>
    <string name="register_rule_title">使用条款</string>
    <string name="and">和</string>
    <string name="register_protocol_title">隐私协议</string>
    <string name="login_success">登陆成功!</string>
    <string name="account_no_empty">用户名不能为空</string>
    <string name="phone_no_empty">手机号码不能为空</string>
    <string name="password_no_empty">密码不能为空</string>
    <string name="register_success">注册成功！</string>
    <string name="find_password">找回密码</string>
    <string name="user_info">圈友料</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="phone_no_tip">请填写手机号码</string>
    <string name="birthday_tip">请选择生日</string>
    <string name="location_tip">请选择所在地</string>
    <string name="confirm">确定</string>
    <string name="error_gif">gif图出错</string>
    <string name="permission_name_location">app运行需要获取位置权限,请同意</string>
    <string name="wr_permission_tip">app运行需要获取文件权限,请同意</string>
    <string name="select_city">选择城市</string>
    <string name="currentAddress">您正在看：</string>
    <string name="nvshen">女神</string>
    <string name="yujie">御姐</string>
    <string name="luoli">萝莉</string>
    <string name="heisikong">黑丝控</string>
    <string name="tianniu">甜妞</string>
    <string name="zhifukong">制服控</string>
    <string name="gaogenkong">高跟控</string>
    <string name="nuannan">暖男</string>
    <string name="nanshen">男神</string>
    <string name="zhainan">宅男</string>
    <string name="home">首页</string>
    <string name="dynamic">动态</string>
    <string name="msg">消息</string>
    <string name="mine">我的</string>
    <string name="attention">关注</string>
    <string name="search">搜索</string>
    <string name="send_user">推荐该联系人</string>
    <string name="dynamic_title">动态</string>
    <string name="add_user">添加好友</string>
    <string name="send_msg">发送消息</string>
    <string name="user_infomation">用户资料</string>
    <string name="guan_zhu">关注</string>
    <string name="send">发送</string>
    <string name="verify_add_friend_tip">验证消息</string>
    <string name="please_write_verify_add_message">请填写添加好友验证信息...</string>
    <string name="remark_type_tip">备注和分组</string>
    <string name="please_write_friend_remark">请填写好友备注</string>
    <string name="remark">备注</string>
    <string name="fen_zu">分组</string>
    <string name="hot_value_tip">人气值:89</string>
    <string name="please_nick_account">请输入昵称或账号</string>
    <string name="search_result_title">搜索结果</string>
    <string name="search_recommend_title">搜索推荐</string>
    <string name="linkmans">联系人</string>
    <string name="good_friends">好友</string>
    <string name="group">群组</string>
    <string name="recommend_link_mans">推荐联系人</string>
    <string name="chat_mans_tip">消息列表</string>
    <string name="same_city">同城推荐</string>
    <string name="attention_list">关注列表</string>
    <string name="my_attention">我的关注</string>
    <string name="open_vip">开通会员</string>
    <string name="update_pass_word">修改密码</string>
    <string name="options_back">意见反馈</string>
    <string name="version_update">版本更新</string>
    <string name="login_out">退出登录</string>
    <string name="qy_dynamic">圈友动态</string>
    <string name="comment_tip">留点评论吧...</string>
    <string name="tian_msg_tip">说点蜜语哟...</string>
    <string name="moodsValue">人气值</string>
    <string name="get_img_tip">app获取图片需要该权限，请同意！</string>
    <string name="revert">回复</string>
    <string name="reprint">转载</string>
    <string name="collect">收藏</string>
    <string name="report">举报</string>
    <string name="comment_hint">留点什么哈...</string>
    <string name="fen_zu_name">分组名称</string>
    <string name="member_count">8/16</string>
    <string name="settle_show">进驻展示</string>
    <string name="input_your_nick">请输入您要修改的昵称</string>
    <string name="copy">复制</string>
    <string name="flow_call_settle">流量推广位招募中</string>
    <string name="zhaomu_jianjie">入驻首页将会给您带来更多的优质流量，增加曝光率，提升关注度，增加您的钱包和人气哦！</string>
    <string name="price_1">￥666元/月\n入驻</string>
    <string name="price_2">￥470元/月\n入驻</string>
    <string name="price_3">￥350元/月\n入驻</string>
    <string name="input_old_password">请输入旧密码</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="options_tip">提点App改进意见或建议吧！...</string>
    <string name="login_out_tip">您确定要退出登陆吗?</string>
    <string name="user_centetr">个人空间</string>
    <string name="photo">照片</string>
    <string name="video">视频</string>
    <string name="production">作品</string>
    <string name="like">喜欢</string>
    <string name="setting">设置</string>
    <string name="update_password_tip">密码必须是字母和数字组合且长度大于6位</string>
    <string name="new_password_equles_old">新密码不能与旧密码相同!</string>
    <string name="code_tip">请输入验证码</string>
    <string name="push_out_app">退出夜嗨</string>
    <string name="app_need_permis_dialog_title">App运行必需权限</string>
    <string name="app_need_permissions">该应用正常运行需要获取位置、读写文件、相机等权限</string>
    <string name="agree_app">同意</string>
    <string name="click_search">点击搜索</string>
    <string name="content">这是邀请说明的内容，嗲年发哦佛法建瓯帕金斯发哦分哦泼妇麻烦皮肤敏感苹果
        .......................</string>
    <string name="invite_method">邀请新用户打开浏览器扫描下载二位码或搜索下载链接，下载App，注册时填写您的邀请码！</string>
    <string name="my_like">我的关注</string>
    <string name="photo_alubm">图片相册</string>
    <string name="dynamic_space">动态广场</string>
    <string name="photo_space">图片相册</string>
    <string name="dynamic_piazza">动态广场</string>
    <string name="my_fans">我的粉丝</string>
    <string name="all">全部</string>
    <string name="ye_hi_number">夜嗨号:</string>
    <string name="positive">确定</string>
    <string name="crop_img">裁剪图片</string>
    <string name="update_recommend_users">换一批</string>
    <string name="yehi_red_search">夜嗨热搜</string>

    <string name="str_none" />
    <string name="loading">加载中…</string>
    <string name="load_failed">加载失败. 点击重试!</string>
    <string name="load_failed_no_network">网络环境差!点击重试</string>
    <string name="empty">暂无数据!</string>

</resources>
