<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/permission_dialog_bg"
    android:orientation="vertical"
    android:padding="@dimen/dp_15">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_need_permis_dialog_title"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/init_permissions_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:paddingLeft="@dimen/dp_40"
        android:paddingRight="@dimen/dp_40"
        android:text="@string/app_need_permissions"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_30"
        android:orientation="horizontal">

        <Button
            android:id="@+id/pushOutAppBtn"
            android:layout_width="@dimen/dp_78"
            android:layout_height="@dimen/dp_36"
            android:layout_marginEnd="@dimen/dp_45"
            android:layout_marginRight="@dimen/dp_45"
            android:background="@drawable/per_dialog_position_btn"
            android:text="@string/push_out_app"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/agreeBtn"
            android:layout_width="@dimen/dp_78"
            android:layout_height="@dimen/dp_36"
            android:layout_marginStart="@dimen/dp_45"
            android:layout_marginLeft="@dimen/dp_45"
            android:background="@drawable/per_dialog_agree_btn"
            android:text="@string/agree_app"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>