<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:rtv="http://schemas.android.com/apk/res-auto"
              android:id="@+id/bottomTabView"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="bottom"
              android:background="@color/white"
              android:orientation="vertical">

    <View
        android:id="@+id/grey_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0_3"
        android:background="@color/black_dd"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dp_2"
        android:weightSum="4">

        <!--<com.ruffian.library.RTextView-->
            <!--android:id="@+id/homeBottomItem"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--android:gravity="center"-->
            <!--android:background="?android:attr/selectableItemBackgroundBorderless"-->
            <!--android:text="@string/home"-->
            <!--rtv:background_normal="@color/white"-->
            <!--rtv:icon_src_normal="@drawable/home_light_icon"-->
            <!--rtv:icon_src_pressed="@drawable/home_light_icon"-->
            <!--rtv:icon_src_unable="@drawable/home_icon"-->
            <!--rtv:icon_direction="top"-->
            <!--rtv:icon_height="@dimen/dp_27"-->
            <!--rtv:icon_width="@dimen/dp_27"-->
            <!--rtv:text_color_normal="@color/gray"-->
            <!--rtv:text_color_pressed="@color/middlePurple"-->
            <!--rtv:text_color_unable="@color/gray"/>-->

        <!--<com.ruffian.library.RTextView-->
            <!--android:id="@+id/dynamicBottomItem"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--android:background="?android:attr/selectableItemBackgroundBorderless"-->
            <!--android:gravity="center"-->
            <!--android:text="@string/dynamic"-->
            <!--rtv:background_normal="@color/white"-->
            <!--rtv:icon_src_normal="@drawable/dynamic_light_icon"-->
            <!--rtv:icon_src_pressed="@drawable/dynamic_light_icon"-->
            <!--rtv:icon_src_unable="@drawable/dynamic_icon"-->
            <!--rtv:icon_direction="top"-->
            <!--rtv:icon_height="@dimen/dp_27"-->
            <!--rtv:icon_width="@dimen/dp_27"-->
            <!--rtv:text_color_normal="@color/gray"-->
            <!--rtv:text_color_pressed="@color/middlePurple"-->
            <!--rtv:text_color_unable="@color/gray"/>-->

        <!--<ImageView-->
            <!--android:id="@+id/pushContent"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--android:background="?android:attr/selectableItemBackgroundBorderless"-->
            <!--android:padding="@dimen/dp_8"-->
            <!--android:src="@drawable/icon_public"-->
            <!--tools:ignore="ContentDescription"/>-->

        <!--<com.ruffian.library.RTextView-->
            <!--android:id="@+id/msgBottomItem"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--android:gravity="center"-->
            <!--android:background="?android:attr/selectableItemBackgroundBorderless"-->
            <!--android:text="@string/msg"-->
            <!--rtv:background_normal="@color/white"-->
            <!--rtv:icon_src_normal="@drawable/msg_light_icon"-->
            <!--rtv:icon_src_pressed="@drawable/msg_light_icon"-->
            <!--rtv:icon_src_unable="@drawable/msg_icon"-->
            <!--rtv:icon_direction="top"-->
            <!--rtv:icon_height="@dimen/dp_27"-->
            <!--rtv:icon_width="@dimen/dp_27"-->
            <!--rtv:text_color_normal="@color/gray"-->
            <!--rtv:text_color_pressed="@color/middlePurple"-->
            <!--rtv:text_color_unable="@color/gray"/>-->

        <!--<com.ruffian.library.RTextView-->
            <!--android:id="@+id/mineBottomItem"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--android:gravity="center"-->
            <!--android:background="?android:attr/selectableItemBackgroundBorderless"-->
            <!--android:text="@string/mine"-->
            <!--rtv:background_normal="@color/white"-->
            <!--rtv:icon_src_normal="@drawable/mine_light_icon"-->
            <!--rtv:icon_src_pressed="@drawable/mine_icon"-->
            <!--rtv:icon_src_unable="@drawable/mine_icon"-->
            <!--rtv:icon_direction="top"-->
            <!--rtv:icon_height="@dimen/dp_27"-->
            <!--rtv:icon_width="@dimen/dp_27"-->
            <!--rtv:text_color_normal="@color/gray"-->
            <!--rtv:text_color_pressed="@color/middlePurple"-->
            <!--rtv:text_color_unable="@color/gray"/>-->
        <TextView
            android:id="@+id/homeBottomItem"
            style="@style/mainNavigationTabItemTv"
            android:clickable="true"
            android:drawableTop="@drawable/home_selector"
            android:focusable="true"
            android:text="@string/home"/>

        <TextView
            android:id="@+id/dynamicBottomItem"
            style="@style/mainNavigationTabItemTv"
            android:clickable="true"
            android:drawableTop="@drawable/dynamic_selector"
            android:focusable="true"
            android:text="@string/dynamic"/>

        <TextView
            android:id="@+id/msgBottomItem"
            style="@style/mainNavigationTabItemTv"
            android:clickable="true"
            android:drawableTop="@drawable/msg_selector"
            android:focusable="true"
            android:text="@string/msg"/>

        <TextView
            android:id="@+id/mineBottomItem"
            style="@style/mainNavigationTabItemTv"
            android:clickable="true"
            android:drawableTop="@drawable/mine_selector"
            android:focusable="true"
            android:text="@string/mine"/>
    </LinearLayout>
</LinearLayout>
